# apps/api/src/api/schemas/monitors.ts
@@ -1,3 +1,4 @@
+import { HttpMethod, MonitorStatus, MonitorType } from "@pulse/shared";
 import j from "./extend";
 
 export const createMonitorSchema = j
@@ -8,43 +9,68 @@ export const createMonitorSchema = j
       "string.min": "Name must be at least 1 character long",
       "string.max": "Name cannot exceed 255 characters",
     }),
-    monitorType: j.string().valid("http").required().messages({
-      "any.only": "Monitor type must be one of [http]",
-      "any.required": "Monitor type is required",
-    }),
+    monitorType: j
+      .string()
+      .valid(...Object.values(MonitorType))
+      .required()
+      .messages({
+        "any.only":
+          "Monitor type must be one of: " +
+          Object.values(MonitorType).join(", "),
+        "any.required": "Monitor type is required",
+      }),
     schedule: j.string().cron().required().messages({
       "string.empty": "Schedule cannot be empty",
       "any.required": "Schedule is required",
       "string.cron": "Schedule must be a valid cron expression",
     }),
-    status: j.string().valid("active", "paused").required().messages({
-      "any.only": "Status must be one of [active, paused]",
-      "any.required": "Status is required",
-    }),
+    status: j
+      .string()
+      .valid(...Object.values(MonitorStatus))
+      .required()
+      .messages({
+        "any.only":
+          "Status must be one of: " + Object.values(MonitorStatus).join(", "),
+        "any.required": "Status is required",
+      }),
     config: j
       .alternatives()
-      .try(
-        j.object({
-          url: j.string().uri().required().messages({
-            "string.uri": "URL must be a valid URI",
-            "any.required": "URL is required",
-          }),
-          method: j
-            .string()
-            .required()
-            .valid("GET", "POST", "PUT", "DELETE", "HEAD", "OPTIONS", "PATCH")
-            .default("GET")
-            .messages({
-              "any.required": "Method is required",
-              "any.only":
-                "Method must be one of [GET, POST, PUT, DELETE, HEAD, OPTIONS, PATCH]",
+      .conditional("monitorType", [
+        {
+          is: MonitorType.http,
+          then: j.object({
+            url: j.string().uri().required().messages({
+              "string.uri": "URL must be a valid URI",
+              "string.empty": "URL cannot be empty",
+              "any.required": "URL is required",
             }),
-        }),
-      )
+            method: j
+              .string()
+              .required()
+              .valid(...Object.values(HttpMethod))
+              .default("GET")
+              .messages({
+                "any.required": "Method is required",
+                "string.empty": "Method cannot be empty",
+                "any.only":
+                  "Method must be one of: " +
+                  Object.values(HttpMethod).join(", "),
+              }),
+          }),
+        },
+        {
+          is: MonitorType.shell,
+          then: j.object({
+            command: j.string().required().messages({
+              "string.empty": "Shell command cannot be empty",
+              "any.required": "Shell command is required",
+            }),
+          }),
+        },
+      ])
       .required()
       .messages({
         "any.required": "Config is required",
-        "alternatives.match": "Config must match one of the allowed types",
       }),
   })
   .options({ abortEarly: false });
